--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -9,14 +9,18 @@ html{
 body{
     display: grid;
     margin: 0;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 2;
+    grid-template-columns: 23% 54.5% 22%;
 }
 
 header{
     grid-column: 1/2;
     max-width: 597px;
-    width: 434px;
-    height: 810px;
+    width: 100%;
+    min-width: 277px;
+    height: 811px;
+    text-wrap: nowrap;
+    flex-wrap: nowrap;
     .home{
         display: flex;
         flex-direction: column;
@@ -27,17 +31,20 @@ header{
         margin: 10px  5px;
         box-sizing: border-box;
         font-size: 1rem;
-        & a {
+        a {
             display: inline-block;
             color: $white;
             font-style: normal;
             text-decoration: none;
         }
-        & img {
+        img {
             width: 24px;
             margin-right: 22px;
             vertical-align: middle;
             margin-bottom: 0.4em;
+        }
+        p{
+            display: inline;
         }
       
     }
@@ -69,16 +76,17 @@ header{
 
 
 main{
-    z-index: .5;
     display: grid;
-    grid-column: 3/5;
-    grid-template-columns: 2fr 1fr;
+    grid-column: 2;
+    grid-template-columns: 1fr;
+    grid-template-rows: 340px 1fr; /* Los elementos se ajustan automáticamente a la altura necesaria */
     overflow: hidden;
-    width: max-content;
+    width: fit-content;
     overflow-y: scroll;
     height: 815px;
     .portade{
-        grid-column: 1/9;
+        grid-column: 1;
+        grid-row: 1; /* Asigna .portade a la primera fila */
         background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
         background-size: cover; 
         background-position: center 4%; 
@@ -86,79 +94,86 @@ main{
         margin: 10px  5px 0 5px;
         border-radius: $radius $radius 0 0;
         padding: 20px;
-        display: flex;
+        display: block;
         flex-direction: column;
         gap: 80px;
-        width: 965px;
+        //width: 965px;
+        width: 94%;
         height: 340px;
     }
-    .content{
-        grid-column: 1/9;
+    
+    .content {
+        grid-column: 1;
+        grid-row: 2; /* Asigna .content a la segunda fila */
+        display: inline-block;
         background: linear-gradient( rgb(5 124 136) 0%, $gray 8%,);
         padding: 20px;
         margin: 0  5px 0 5px;
-        width: 965px;
+        //width: 965px;
+        width: 94%;
+        height: fit-content;
     }
-    .rigthSide{
-        z-index: 0;
-        box-sizing: border-box;
-        grid-column: 9 / 11;
-        grid-row: 1 / 3;
-        background-color: #0f0f0f;
-        padding: 20px;
-        margin: 10px 5px 0px 3px;
-        width: 410px;
-        border-radius: 10px 10px;
-        height: 805px;
-        position: fixed;
-        right: 15px;
-    }
+
+    .footer{
+        grid-column: 1;
+        .about{
+            width: 965px;
+            grid-column: 2/3;
+            background-color:  $gray;
+            padding: 20px;
+            margin: 0  5px 0 5px;
+            .aboutLinks{
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-start;
+                padding: 20px;
+            }
+            hr{
+                width: 95%;
+                border: 0.1px solid rgba($color: $white, $alpha: .1);
+            }
+            .lastLinks{
+                padding-top: 30px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: baseline;
+                max-width: 1200px;
+                margin: 0 auto;
+                text-align: center;
+                font-size: .8rem;
+                height: 100px;
+            }
+        }
+      }
+      &:hover{
+        padding-left: -5px;
+      }
 }
 
-.footer{
-    grid-column: 3/9;
-    width: 1015px;
-    .about{
-        width: 965px;
-        grid-column: 2/3;
-        background-color:  $gray;
-        padding: 20px;
-        margin: 0  5px 0 5px;
-        .aboutLinks{
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            padding: 20px;
-        }
-        hr{
-            width: 95%;
-            border: 0.1px solid rgba($color: $white, $alpha: .1);
-        }
-        .lastLinks{
-            padding-top: 30px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            align-items: baseline;
-            max-width: 1200px;
-            margin: 0 auto;
-            text-align: center;
-            font-size: .8rem;
-            height: 100px;
-        }
-    }
-  }
- 
+//----------Aside
+.rigthSide{
+    z-index: 0;
+    box-sizing: border-box;
+    grid-column: 3;
+    grid-row: 1;
+    background-color: #0f0f0f;
+    padding: 20px;
+    margin: 10px 5px 0px 3px;
+    width: 410px;
+    border-radius: 10px 10px;
+    height: 805px;
+    right: 15px;
+}
+
   .controls{
-    grid-column: 3/5;
+    grid-column: 1/4;
+    grid-row: 2;
     background-color: $black;
     color: #fff;
-    width: 1870px;
+    width: 100%;
     height: 105px;
     font-family: Arial, sans-serif;
-    position: relative;
-    left: -430px;
-    bottom: -5px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     padding: 10px;
@@ -189,4 +204,17 @@ main{
         gap: 10px;
     }
   }
+
+  //-----------Media querys
+  @media (max-width: 1010px) {
+    body{
+        display: grid;
+        margin: 0;
+        grid-template-rows: 2;
+        grid-template-columns: 11% 54.5% 22%;
+    
+    }
+  }
+
+
 
