Se corrige bug del height de la barra de controles

--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -10,16 +10,17 @@ html{
 body{
     display: grid;
     margin: 0;
-    grid-template-rows: 2;
+    grid-template-rows: auto 85px;
     grid-template-columns: 23% 54.5% 22%;
 }
 
 header{
+    overflow: hidden;
     grid-column: 1/2;
     max-width: 597px;
     width: 100%;
     min-width: 277px;
-    height: 86vh;
+    height: 90vh;
     min-height: 510.297px;
     text-wrap: nowrap;
     flex-wrap: nowrap;
@@ -85,7 +86,7 @@ main{
     overflow: hidden;
     width: fit-content;
     overflow-y: scroll;
-    height: 86vh;
+    height: 90vh;
     min-height: 510.297px;
     .portade{
         grid-column: 1;
@@ -163,7 +164,7 @@ main{
     background-color: #0f0f0f;
     width: 410px;
     border-radius: 10px 10px;
-    height: 84.5vh;
+    height: 88.7vh;
     min-height: 501.219px;
     right: 15px;
     overflow: hidden;
@@ -177,7 +178,6 @@ main{
     color: #fff;
     width: 100%;
     min-height: 85px;
-    height: 85px;
     font-family: Arial, sans-serif;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
